# vpn-world-desktop

./: .gitignore  Info.plist  README.md  app.provisionprofile  create-dmg.sh  distrubution.xml  embedded--.provisionprofile  embedded-0.provisionprofile  embedded.provisionprofile  entitlements.mac.plist  index.html  licence.md  main.js  package-lock.json  package.json
.erb/: vpn_world_desktop_profile.provisionprofile
.erb/scripts/: notarize.js  sign.js
.github/workflows/: publish.yml
Assets/: client.ovpn  sudo-askpass.osascript.js
Scripts/: WindowManager.js  electronSudo.js  preload.js  store.js  sudo.js
assets/: Info.plist  atray.icns  atray16.icns  entitlements.mac copy.back  entitlements.mac.plist  icno.icns  icon-back1.icns  tray.icns  tray16.icns
assets/exec/: openvpn  openvpn10
assets/icons/mac/: icon.icns
exec/: openvpn  openvpn10
exec-back/: openvpn
native-openvpn/: CMakeLists.txt  package-lock.json  package.json
native-openvpn/cpp/: module.cc
native-openvpn/js/: main.js
patches/: @amilajack+openvpn-bin+0.0.0.patch
release/app/: package-lock.json  package.json
src/: App.js  i18n.js  index.css  index.js  styledComponents.js
src/components/: about.jsx  connection.jsx
src/icons/: Logo.jsx
src/main/: WindowManager.js  main-back.ts  main.ts  preload.js  preload.ts  store.ts  sudo.ts
src/renderer/: index.tsx  preload.d.ts
src/renderer/src/: App.tsx  index.tsx  styledComponents.ts
src/renderer/src/components/: about.tsx  connection.tsx  index.ts
src/renderer/src/icons/: Logo.tsx
src/renderer/src/tools/: colors.ts
